--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -118,10 +118,15 @@ iframe {
     -webkit-overflow-scrolling:touch;
 }
 */
+/* ======= Matrix Effect ======= */
+.matrix{
+  position: fixed;
+  z-index: -1;
+}
 /* ======= Header ======= */
 .header {
   padding: 30px 0;
-  background: #f5f5f5;
+  background: rgb(245,245,245,.9);
   border-top: 10px solid #778492;
 }
 .header .btn {
