--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -123,6 +123,10 @@ iframe {
   position: fixed;
   z-index: -1;
 }
+/* ======= Div proyectos oculto ======= */
+#show-project{
+  display:none
+}
 /* ======= Header ======= */
 .header {
   padding: 30px 0;
